--- a/coffee_sales.ipynb
+++ b/coffee_sales.ipynb
@@ -5,12 +5,12 @@
    "id": "8a77807f92f26ee",
    "metadata": {},
    "source": [
-    "## Setup inicial"
+    "## Setup inicial - Bibliotecas e importação de dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fbc121e30a2defb3",
    "metadata": {
     "ExecuteTime": {
@@ -26,16 +26,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4fed2f1f",
-   "metadata": {},
-   "source": [
-    "## Importando o dataset"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4bf26a44c8175e18",
    "metadata": {
     "ExecuteTime": {
@@ -43,184 +35,15 @@
      "start_time": "2025-08-24T18:39:54.886617Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>cash_type</th>\n",
-       "      <th>card</th>\n",
-       "      <th>money</th>\n",
-       "      <th>coffee_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>2024-03-01 10:15:50.520</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-0001</td>\n",
-       "      <td>38.70</td>\n",
-       "      <td>Latte</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>2024-03-01 12:19:22.539</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-0002</td>\n",
-       "      <td>38.70</td>\n",
-       "      <td>Hot Chocolate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>2024-03-01 12:20:18.089</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-0002</td>\n",
-       "      <td>38.70</td>\n",
-       "      <td>Hot Chocolate</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>2024-03-01 13:46:33.006</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-0003</td>\n",
-       "      <td>28.90</td>\n",
-       "      <td>Americano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>2024-03-01 13:48:14.626</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-0004</td>\n",
-       "      <td>38.70</td>\n",
-       "      <td>Latte</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3631</th>\n",
-       "      <td>2025-03-23</td>\n",
-       "      <td>2025-03-23 10:34:54.894</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-1158</td>\n",
-       "      <td>35.76</td>\n",
-       "      <td>Cappuccino</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3632</th>\n",
-       "      <td>2025-03-23</td>\n",
-       "      <td>2025-03-23 14:43:37.362</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-1315</td>\n",
-       "      <td>35.76</td>\n",
-       "      <td>Cocoa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3633</th>\n",
-       "      <td>2025-03-23</td>\n",
-       "      <td>2025-03-23 14:44:16.864</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-1315</td>\n",
-       "      <td>35.76</td>\n",
-       "      <td>Cocoa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3634</th>\n",
-       "      <td>2025-03-23</td>\n",
-       "      <td>2025-03-23 15:47:28.723</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-1316</td>\n",
-       "      <td>25.96</td>\n",
-       "      <td>Americano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3635</th>\n",
-       "      <td>2025-03-23</td>\n",
-       "      <td>2025-03-23 18:11:38.635</td>\n",
-       "      <td>card</td>\n",
-       "      <td>ANON-0000-0000-1275</td>\n",
-       "      <td>35.76</td>\n",
-       "      <td>Latte</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3636 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            date                 datetime cash_type                 card  \\\n",
-       "0     2024-03-01  2024-03-01 10:15:50.520      card  ANON-0000-0000-0001   \n",
-       "1     2024-03-01  2024-03-01 12:19:22.539      card  ANON-0000-0000-0002   \n",
-       "2     2024-03-01  2024-03-01 12:20:18.089      card  ANON-0000-0000-0002   \n",
-       "3     2024-03-01  2024-03-01 13:46:33.006      card  ANON-0000-0000-0003   \n",
-       "4     2024-03-01  2024-03-01 13:48:14.626      card  ANON-0000-0000-0004   \n",
-       "...          ...                      ...       ...                  ...   \n",
-       "3631  2025-03-23  2025-03-23 10:34:54.894      card  ANON-0000-0000-1158   \n",
-       "3632  2025-03-23  2025-03-23 14:43:37.362      card  ANON-0000-0000-1315   \n",
-       "3633  2025-03-23  2025-03-23 14:44:16.864      card  ANON-0000-0000-1315   \n",
-       "3634  2025-03-23  2025-03-23 15:47:28.723      card  ANON-0000-0000-1316   \n",
-       "3635  2025-03-23  2025-03-23 18:11:38.635      card  ANON-0000-0000-1275   \n",
-       "\n",
-       "      money    coffee_name  \n",
-       "0     38.70          Latte  \n",
-       "1     38.70  Hot Chocolate  \n",
-       "2     38.70  Hot Chocolate  \n",
-       "3     28.90      Americano  \n",
-       "4     38.70          Latte  \n",
-       "...     ...            ...  \n",
-       "3631  35.76     Cappuccino  \n",
-       "3632  35.76          Cocoa  \n",
-       "3633  35.76          Cocoa  \n",
-       "3634  25.96      Americano  \n",
-       "3635  35.76          Latte  \n",
-       "\n",
-       "[3636 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"data/machine1.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d812019a",
+   "execution_count": 4,
+   "id": "5879ecbb",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +141,7 @@
        "4          Latte  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,16 +155,86 @@
    "id": "28764728",
    "metadata": {},
    "source": [
-    "## Categorias únicas de cada variável qualitativa"
+    "## 1. Categorias únicas de cada variável qualitativa\n",
+    "\n",
+    "Toda variável qualitativa possui um conjunto  \n",
+    "finito de valores que ela pode assumir, que  \n",
+    "nós chamamos de \"categorias únicas\".\n",
+    "\n",
+    "O dataset em questão traz um total de  \n",
+    "**três variáveis qualitativas**:  \n",
+    "\"*cash_type*\", \"*card*\" e \"*coffee_name*\".\n",
+    "\n",
+    "Para exibir as categorias únicas de cada variável  \n",
+    "qualitativa, basta usar a função `unique()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f4d2e26a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['card', 'cash'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cash_type\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c02e0fc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ANON-0000-0000-0001', 'ANON-0000-0000-0002',\n",
+       "       'ANON-0000-0000-0003', ..., 'ANON-0000-0000-1314',\n",
+       "       'ANON-0000-0000-1315', 'ANON-0000-0000-1316'],\n",
+       "      shape=(1317,), dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"card\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "260d90a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Latte', 'Hot Chocolate', 'Americano', 'Americano with Milk',\n",
+       "       'Cocoa', 'Cortado', 'Espresso', 'Cappuccino'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"coffee_name\"].unique()"
+   ]
   }
  ],
  "metadata": {
