feat(eda): frequency distribution of coffee_name

--- a/coffee_sales.ipynb
+++ b/coffee_sales.ipynb
@@ -235,6 +235,87 @@
    "source": [
     "df[\"coffee_name\"].unique()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b53a9ce",
+   "metadata": {},
+   "source": [
+    "## 2. Distribuição da frequência das categorias de \"*coffee_name*\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e035dec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "coffee_name\n",
+       "Americano with Milk    824\n",
+       "Latte                  782\n",
+       "Americano              578\n",
+       "Cappuccino             501\n",
+       "Cortado                292\n",
+       "Hot Chocolate          282\n",
+       "Cocoa                  243\n",
+       "Espresso               134\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"coffee_name\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9d773db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "coffee_name\n",
+       "Americano with Milk    22.662266\n",
+       "Latte                  21.507151\n",
+       "Americano              15.896590\n",
+       "Cappuccino             13.778878\n",
+       "Cortado                 8.030803\n",
+       "Hot Chocolate           7.755776\n",
+       "Cocoa                   6.683168\n",
+       "Espresso                3.685369\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Em percentual:\n",
+    "df[\"coffee_name\"].value_counts(normalize=True) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c1dbc0",
+   "metadata": {},
+   "source": [
+    "#### Logo, pode-se afirmar que os cafés mais vendidos são:\n",
+    "\n",
+    "1 - **Americano with Milk** (22,7%)  \n",
+    "2 - **Latte** (21,5%)  \n",
+    "3 - **Americano** (15,9%)"
+   ]
   }
  ],
  "metadata": {
