feat(eda): mode of qualitative variables

--- a/coffee_sales.ipynb
+++ b/coffee_sales.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "5879ecbb",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4          Latte  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,6 +315,80 @@
     "1 - **Americano with Milk** (22,7%)  \n",
     "2 - **Latte** (21,5%)  \n",
     "3 - **Americano** (15,9%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40f26533",
+   "metadata": {},
+   "source": [
+    "## 3. Moda das variáveis qualitativas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7156064f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Americano with Milk\n",
+       "Name: coffee_name, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"coffee_name\"].mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ae0b20b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    card\n",
+       "Name: cash_type, dtype: object"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cash_type\"].mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "90d33c07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    ANON-0000-0000-0012\n",
+       "Name: card, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"card\"].mode()"
    ]
   }
  ],
