--- a/coffee_sales.ipynb
+++ b/coffee_sales.ipynb
@@ -492,6 +492,41 @@
     "plt.title(\"Relação entre tipo de café e forma de pagamento\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd10387",
+   "metadata": {},
+   "source": [
+    "## 6. Verificando valores nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "29f28139",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date            0\n",
+       "datetime        0\n",
+       "cash_type       0\n",
+       "card           89\n",
+       "money           0\n",
+       "coffee_name     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
